[package]
name = "rcli"
author = "springXu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
axum-macros = "0.4.1"
clap = { version = "4.5.13", features = ["derive"] }
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "net", "tokio-macros", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
